ADD(index.js:REACT-STUDY)
React 가 사용되어지는 방식

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   ></script>
   <script>
     const root = document.getElementById("root");
-    const h3 = React.createElement(//make html
-      "h3",//element
+    const h3 = React.createElement(
+      //make html
+      "h3", //element
       {
-        onMouseEnter: () => console.log("mouse Enter"),//property
+        onMouseEnter: () => console.log("mouse Enter"), //property
       },
-      "Hello I'm a span"//contents
+      "Hello I'm a span" //contents
     );
     const btn = React.createElement(
       "button",
