--- a/index.html
+++ b/index.html
@@ -13,27 +13,38 @@
     src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     crossorigin
   ></script>
-  <script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
-    const h3 = React.createElement(
-      //make html
-      "h3", //element
-      {
-        onMouseEnter: () => console.log("mouse Enter"), //property
-      },
-      "Hello I'm a span" //contents
+    const Title = (
+      <h3 onMouseEnter={() => console.log("mouse Enter")}>Hello I'm a Title</h3>
     );
-    const btn = React.createElement(
-      "button",
-      {
-        onClick: () => console.log("I'm clicked"),
-        style: {
-          backgroundColor: "red",
-        },
-      },
-      "click me"
+    // const h3 = React.createElement(
+    //   //make html
+    //   "h3", //element
+    //   {
+    //     onMouseEnter: () => console.log("mouse Enter"), //property
+    //   },
+    //   "Hello I'm a span" //contents
+    // );
+    const Button = (
+      <button
+        style={{ backgroundColor: "red" }}
+        onClick={() => console.log("I'm clicked")}
+      >
+        Click me
+      </button>
     );
-    const container = React.createElement("div", null, [h3, btn]);
+    //   "button",
+    //   {
+    //     onClick: () => console.log("I'm clicked"),
+    //     style: {
+    //       backgroundColor: "red",
+    //     },
+    //   },
+    //   "click me"
+    // );
+    const container = React.createElement("div", null, [Title, Button]);
     ReactDOM.render(container, root);
   </script>
 </html>
