--- a/index.html
+++ b/index.html
@@ -16,35 +16,20 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = (
-      <h3 onMouseEnter={() => console.log("mouse Enter")}>Hello I'm a Title</h3>
+    let counter = 0;
+    const countUp = () => {
+      counter = counter + 1;
+      render();
+    };
+    const render = () => {
+      ReactDOM.render(<Container />, root);
+    };
+    const Container = () => (
+      <div>
+        <h3>Total Click: {counter}</h3>
+        <button onClick={countUp}>Click me</button>
+      </div>
     );
-    // const h3 = React.createElement(
-    //   //make html
-    //   "h3", //element
-    //   {
-    //     onMouseEnter: () => console.log("mouse Enter"), //property
-    //   },
-    //   "Hello I'm a span" //contents
-    // );
-    const Button = (
-      <button
-        style={{ backgroundColor: "red" }}
-        onClick={() => console.log("I'm clicked")}
-      >
-        Click me
-      </button>
-    );
-    //   "button",
-    //   {
-    //     onClick: () => console.log("I'm clicked"),
-    //     style: {
-    //       backgroundColor: "red",
-    //     },
-    //   },
-    //   "click me"
-    // );
-    const container = React.createElement("div", null, [Title, Button]);
-    ReactDOM.render(container, root);
+    render();
   </script>
 </html>
