--- a/index.html
+++ b/index.html
@@ -16,20 +16,18 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    let counter = 0;
-    const countUp = () => {
-      counter = counter + 1;
-      render();
-    };
-    const render = () => {
-      ReactDOM.render(<Container />, root);
-    };
-    const Container = () => (
-      <div>
-        <h3>Total Click: {counter}</h3>
-        <button onClick={countUp}>Click me</button>
-      </div>
-    );
-    render();
+    function App() {
+      let [counter, setCounter] = React.useState(23);
+      const onClick = () => {
+        setCounter(counter + 1);
+      };
+      return (
+        <div>
+          <h3>Total Click: {counter}</h3>
+          <button onClick={onClick}>Click me</button>
+        </div>
+      );
+    }
+    ReactDOM.render(<App />, root);
   </script>
 </html>
