--- a/ReactMemo.html
+++ b/ReactMemo.html
@@ -14,20 +14,18 @@
     crossorigin
   ></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
   <script type="text/babel">
-    //아래의 text,fontSize는 ES6의 destructure를 이용하여 굳이  props를 파라미터로 따로 받지않고
-    //porps객체안에 있는값을 직접적어서 사용할수있다.
-    function Btn({ text, fontSize=16 }) {//기본값으로 설정을 할수있다.
+    function Btn({ text, onClick }) {
+      console.log(text);
       return (
         <button
+          onClick={onClick}
           style={{
             backgroundColor: "tomato",
             color: "white",
             padding: "10px 20px",
             border: 0,
             borderRadius: 10,
-            fontSize,
           }}
         >
           {text}
@@ -37,19 +35,15 @@
     function ConfirmBtn() {
       return <button>Confirm</button>;
     }
-    Btn.propTypes = {
-      //propTypes을 이용하면
-      //props에서 생길수있는 에러들에대해 체크를 할수있다.
-      text: PropTypes.string.isRequired,
-      fontSize: PropTypes.number,
-    };
-    //props를사용하면 동일한 컴포넌트에서 수정사항들만 바꾸어서 재사용할수있다.
-    //즉 약간의 차이때문에 컴포넌트를 또만들필요가 없다.
+    const MemorizedBtn = React.memo(Btn);
+    //React에게 변경된사항이 없는 props변경이 없다면 굳이 한번더 렌더링 하지않아도됢을 알려줌
     function App() {
+      const [value, setValue] = React.useState("Save Changes");
+      const changeValue = () => setValue("Revert Changes");
       return (
         <div>
-          <Btn text='Save Changes' fontSize={18} />
-          <Btn fontSize='asdf' />
+          <MemorizedBtn text={value} onClick={changeValue} />
+          <MemorizedBtn text='continue' />
         </div>
       );
     }
